# mouse-picking

./: AppWindow.cpp  AppWindow.hpp  CMakeLists.txt  MIT-LICENSE.txt  Material.hpp  Mesh.hpp  README.md  Vertex.hpp  VertexAttributes.hpp  VertexPNT.hpp  copy_assets.cmake  main.cpp  vcpkg.json
assets/models/: cube.txt
extlibs/: DirtyProperty.hpp
shaders/: cube.frag  cube_instanced.frag  cube_instanced.vert  full_quad.frag  full_quad.vert  outliner.frag  outliner.vert  outliner_instanced.frag  outliner_instanced.vert  pnt.vert  solid.frag
